2008-02-28  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/LineSplitter.cs, Mono.TextEditor/TextEditorData.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/GapBuffer.cs,
	  Mono.TextEditor/GutterMargin.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.pidb,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.mdp,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests/LineSplitterTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests/SelectionTests.cs: Fixed Bug
	  365570 - Crash in the editor.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs: Support for escape
	  chars.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorData.cs: Refactored status bar.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/TextEditorData.cs: Removed
	  some debug messages

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextMarker.cs: Added
	  draw routine for a caret marker.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextMarker.cs: Added background marker support.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/TextEditorData.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/Caret.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests/UndoRedoTests.cs,
	  Mono.TextEditor.Highlighting/Caret.cs: Fixed Bug 362692 - Undoing all
	  changes should clear the modified flag of the editor.
	
	  Refactored structure a bit. Added unit tests for undo/redo operations.

2008-02-27  Aaron Bockover <abockover@novell.com>

	* OblivionStyle.xml: Made some style changes to be less bland

	* BrownStyle.xml: Renamed from UbuntuStyle
