@@ -1,5 +1,10 @@
 2008-02-28  Mike Krüger <mkrueger@novell.com> 
 
+	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/Document.cs: Fixed some
+	  bugs caused by a former change.
+
+2008-02-28  Mike Krüger <mkrueger@novell.com> 
+
 	* Mono.TextEditor/LineSplitter.cs, Mono.TextEditor/TextEditorData.cs,
 	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/GapBuffer.cs,
 	  Mono.TextEditor/GutterMargin.cs,
